# AgenticAI

./: .coderabbit.yaml  .containerignore  .dockerignore  .env.example  .gitignore  AGENTS.md  Containerfile  Containerfile.executor  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/scripts/: verify_coolify_deployment.py
.github/workflows/: ci-full.yml  ci.yml  deploy-coolify.yml  docker.yml  image.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260221_0001_track_a_foundation.py  20260222_0002_telegram_webhook_events.py  20260222_0003_runtime_settings_seed.py  20260222_0004_telegram_webhook_enqueue_failed_outcome.py  20260222_0005_task_auth_tenancy_hardening.py  20260223_0006_track_b_schema_foundation.py
docs/: Agent AI - OpenClaw-like System that is more secure.md  AgentAI Brainstorm.md  AgentAI Canvas.canvas  Research — Agentic AI Market Analysis 2026.md  agenticai-reboot-plan.md  bootstrap.md  high-level.md  idea-to-first-customer.md  mvp-contract-v1.md  mvp-ops-runbook.md  mvp-parity-matrix.md  quick brainstorm.md  skill-spec.md
kubernetes-stack/base/: admin.yaml  configmap.yaml  coordinator.yaml  executor.yaml  kustomization.yaml  minio.yaml  namespace.yaml  networkpolicy.yaml  observability.yaml  postgres.yaml  qdrant.yaml  redis.yaml  searxng.yaml  secret.example.yaml
migrations/: 001_init.sql  002_approval_grants.sql
scripts/: build_image.sh  init_db.py  telegram_polling_bridge.py
searxng/: settings.yml
src/agenticai/: __init__.py  main.py
src/prompts/: AGENTS.md  SKILLS.md  TOOLS.md
tests/: conftest.py  db_seed.py  jwt_utils.py  test_bus_contract.py  test_bus_factory.py  test_bus_inmemory.py  test_coordinator_worker.py  test_docker_runtime.py  test_main_startup.py  test_phase2_schema_foundation.py  test_runtime_policy_baseline.py  test_runtime_settings.py  test_system_routes.py  test_telegram_webhook.py  test_track_a_exit_criteria.py
tests/integration/: test_coordinator_flow.py  test_executor_browser.py  test_executor_retries.py  test_executor_shell_policy.py  test_mvp_acceptance.py
tests/unit/: test_approval_grants.py  test_browser_policy.py  test_browser_runner.py  test_coordinator_parse_task.py  (+12 more)
(+70 files in other folders)
